@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2023-07-12T08:11:50Z",
+  "timestamp" : "2023-07-12T16:10:47Z",
   "count_outdated" : 137263,
   "uniques_outdated" : 1485,
-  "count" : 142947,
+  "count" : 143042,
   "uniques" : 1568,
   "clones" : [
     {
       "timestamp": "2023-06-28T00:00:00Z",
-      "count": 202,
-      "count_minmax": [ 133, 390 ],
-      "count_decinc": [ 188, 390 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
+      "count": 63,
+      "count_minmax": [ 63, 390 ],
+      "count_decinc": [ 327, 390 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 1, 2 ]
     },
     {
       "timestamp": "2023-06-29T00:00:00Z",
@@ -133,9 +133,9 @@
     },
     {
       "timestamp": "2023-07-12T00:00:00Z",
-      "count": 111,
-      "count_minmax": [ 111, 111 ],
-      "count_decinc": [ 0, 111 ],
+      "count": 206,
+      "count_minmax": [ 111, 206 ],
+      "count_decinc": [ 0, 206 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
