@@ -1,11 +1,11 @@
 {
-  "count": 5496,
+  "count": 5452,
   "uniques": 42,
   "clones": [
     {
       "timestamp": "2023-06-28T00:00:00Z",
-      "count": 202,
-      "uniques": 2
+      "count": 63,
+      "uniques": 1
     },
     {
       "timestamp": "2023-06-29T00:00:00Z",
@@ -74,7 +74,7 @@
     },
     {
       "timestamp": "2023-07-12T00:00:00Z",
-      "count": 111,
+      "count": 206,
       "uniques": 2
     }
   ]
