@@ -1,3 +1,12 @@
+2023-07-12T16:10:47Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5533919987 # 1000
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-12
+* notice: last 14d: unq all: 42 5452
+* notice: prev accum: outdated-unq outdated-all / unq all: 1485 137263 / 1568 142947
+* notice: next accum: outdated-unq outdated-all / unq all: 1485 137263 / 1568 143042
+* notice: prev exec diff / last date diff / accum: unq all: +0 +95 -1 -139 / +2 +206 -0 -0 / 2 206
+* notice: removed / changed dates: [] / [2023-06-28 2023-07-12]
+
 2023-07-12T08:11:50Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5529176632 # 999
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-12
